--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "cheerio": "^1.0.0-rc.2",
+    "request": "^2.81.0"
   }
 }
